@startuml

title __SERVICE's Class Diagram__\n

  namespace com.dh.Wesped {
    namespace Service {
      class com.dh.Wesped.Service.BookingService {
          {static} - logger : Logger
          + BookingService()
          + filterByProductId()
          + getAllBookings()
          + newBooking()
      }
    }
  }
  

  namespace com.dh.Wesped {
    namespace Service {
      class com.dh.Wesped.Service.CategoryService {
          {static} - logger : Logger
          + CategoryService()
          + deleteById()
          + editCategory()
          + findById()
          + listAll()
          + save()
      }
    }
  }
  

  namespace com.dh.Wesped {
    namespace Service {
      class com.dh.Wesped.Service.CityService {
          {static} - logger : Logger
          + CityService()
          + findById()
          + listAll()
          + save()
      }
    }
  }
  

  namespace com.dh.Wesped {
    namespace Service {
      class com.dh.Wesped.Service.FeatureService {
          {static} - logger : Logger
          + FeatureService()
          + findById()
          + listAll()
          + save()
      }
    }
  }
  

  namespace com.dh.Wesped {
    namespace Service {
      class com.dh.Wesped.Service.ImageService {
          {static} - logger : Logger
          + ImageService()
          + findById()
          + listAll()
          + save()
      }
    }
  }
  

  namespace com.dh.Wesped {
    namespace Service {
      class com.dh.Wesped.Service.PolicyService {
          {static} - logger : Logger
          + PolicyService()
          + findById()
          + listAll()
          + save()
      }
    }
  }
  

  namespace com.dh.Wesped {
    namespace Service {
      class com.dh.Wesped.Service.ProductService {
          {static} - logger : Logger
          + ProductService()
          + filterByCategory()
          + filterByCity()
          + filterByDates()
          + filterByDatesAndCity()
          + findById()
          + listAll()
          + save()
      }
    }
  }
  

  namespace com.dh.Wesped {
    namespace Service {
      class com.dh.Wesped.Service.UserService {
          {static} - logger : Logger
          + UserService()
          + existsUserByEmail()
          + getAllUsers()
          + newUser()
          + userByEmail()
      }
    }
  }
  

  com.dh.Wesped.Service.BookingService o-- com.dh.Wesped.Repository.BookingRepository : bookingRepository
  com.dh.Wesped.Service.CategoryService o-- com.dh.Wesped.Repository.CategoryRepository : categoryRepository
  com.dh.Wesped.Service.CityService o-- com.dh.Wesped.Repository.CityRepository : cityRepository
  com.dh.Wesped.Service.FeatureService o-- com.dh.Wesped.Repository.FeatureRepository : featureRepository
  com.dh.Wesped.Service.ImageService o-- com.dh.Wesped.Repository.ImageRepository : imageRepository
  com.dh.Wesped.Service.PolicyService o-- com.dh.Wesped.Repository.PolicyRepository : policyRepository
  com.dh.Wesped.Service.ProductService o-- com.dh.Wesped.Repository.ProductRepository : productRepository
  com.dh.Wesped.Service.UserService o-- com.dh.Wesped.Repository.UserRepository : userRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
